--- a/index.html
+++ b/index.html
@@ -1,3 +1,14 @@
 <!DOCTYPE html>
+<html>
 
-<p>Hello</p>
+<head>
+    <script src="main.css" type="text/style"></script>
+</head>
+
+<body>
+  <div>
+    <p>Div</p>
+  </div>
+</body>
+
+</html>
