--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <script src="main.css" type="text/style"></script>
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
