--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
 
 <body>
-    <h1>Title!</h1>
+    <h1>Anson Moorey</h1>
   <div class="header_div">
-    <p>Div</p>
+    <p>Text</p>
   </div>
 </body>
 
