--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-
 <head>
     <link rel="stylesheet" href="main.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -8,9 +7,11 @@
 </head>
 
 <body>
-  <div class="header_div">
-    <h1>Anson Moorey</h1>
-  </div>
+    <div class="header_div">
+        <h1>Anson Moorey</h1>
+    </div>
+    <footer>
+        <p id="copyright">© Anson Moorey 2021</p>
+    </footer>
 </body>
-
 </html>
