--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- If you are reading this, then good for you!! :) -Anson -->
+<!-- If you are reading this, then good for you!! :) -->
 <html>
 <head>
     <link rel="stylesheet" href="main.css">
