--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html>
 <head>
     <link rel="stylesheet" href="main.css">
+    <link rel="icon" href="favicon.png">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300&display=swap" rel="stylesheet">
 </head>
