--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
     <div class="header_div">
         <h1>Anson Moorey</h1>
+        <h3>Nasa 3D Viewer • Home</h3>
     </div>
     <footer>
         <p id="copyright">© Anson Moorey 2021</p>
