--- a/index.html
+++ b/index.html
@@ -54,6 +54,10 @@ if (isFirefox) {
 }
 output += '<hr>';
 document.getElementById("infodisplay").innerHTML = output;
+    
+$.getJSON('https://api.db-ip.com/v2/free/self', function(data) {
+  console.log(JSON.stringify(data, null, 2));
+});
 </script>
 
 </body>
