--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="header_div">
         <h1>Anson Moorey</h1>
-        <h3><a href="/NasaViewingCentre.html">Nasa 3D Viewer</a> • <a href="/index.html">Home</a></h3>
+        <h3><a href="/NasaViewingCentre.html">Nasa 3D Viewer</a> • <a href="/quote.html">Quote</a> • <a href="/index.html">Home</a></h3>
     </div>
     <footer>
         <p id="infodisplay">...</p>
