--- a/quote.html
+++ b/quote.html
@@ -9,11 +9,9 @@
 </head>
 
 <body>
-    <p id="quote">"I was thirty. Before me stretched the portentous, menacing road of a new decade.
-
-It was seven o’clock when we got into the coupé with him and started for Long Island. Tom talked incessantly, exulting and laughing, but his voice was as remote from Jordan and me as the foreign clamour on the sidewalk or the tumult of the elevated overhead. Human sympathy has its limits, and we were content to let all their tragic arguments fade with the city lights behind. Thirty – the promise of a decade of loneliness, a thinning list of single men to know, a thinning briefcase of enthusiasm, thinning hair. But there was Jordan beside me, who, unlike Daisy, was too wise ever to carry well-forgotten dreams from age to age. As we passed over the dark bridge her wan face fell lazily against my coat’s shoulder and the formidable stroke of thirty died away with the reassuring pressure of her hand.
-
-So we drove on toward death through the cooling twilight." (Fitzgerald 143)
+    <p id="quote">"I was thirty. Before me stretched the portentous, menacing road of a new decade.<br>
+It was seven o’clock when we got into the coupé with him and started for Long Island. Tom talked incessantly, exulting and laughing, but his voice was as remote from Jordan and me as the foreign clamour on the sidewalk or the tumult of the elevated overhead. Human sympathy has its limits, and we were content to let all their tragic arguments fade with the city lights behind. Thirty – the promise of a decade of loneliness, a thinning list of single men to know, a thinning briefcase of enthusiasm, thinning hair. But there was Jordan beside me, who, unlike Daisy, was too wise ever to carry well-forgotten dreams from age to age. As we passed over the dark bridge her wan face fell lazily against my coat’s shoulder and the formidable stroke of thirty died away with the reassuring pressure of her hand.<br>
+So we drove on toward death through the cooling twilight." (Fitzgerald 143)<br>
 — Nick Carraway
 <hr>
     </p>
