--- a/quote.html
+++ b/quote.html
@@ -2,6 +2,9 @@
 <!-- If you are reading this, then good for you!! :) -->
 <html>
 <head>
+    <style>
+        html {background-image:url(dark_background.jpeg);}
+    </style>
     <link rel="stylesheet" href="main.css">
     <link rel="icon" href="favicon.png">
     <link rel="preconnect" href="https://fonts.gstatic.com">
