--- a/quote.html
+++ b/quote.html
@@ -3,7 +3,7 @@
 <html>
 <head>
     <style>
-        html {background-image:url("dark_background.jpg");}
+        html {background-image:url("dark_background.jpg");background-repeat:no-repeat;}
     </style>
     <link rel="stylesheet" href="main.css">
     <link rel="icon" href="favicon.png">
