--- a/quote.html
+++ b/quote.html
@@ -4,6 +4,7 @@
 <head>
     <style>
         html {background-image:url("dark_background.jpg");background-repeat:no-repeat;background-size:cover;}
+        p {font-color:#8a8a8a;}
     </style>
     <link rel="stylesheet" href="main.css">
     <link rel="icon" href="favicon.png">
