--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </div>
     <footer>
         <p id="infodisplay">...</p>
-        <p id=copyright"><a href="/README.txt">README</a></p>
+        <p id=copyright"><a href="/README.txt">readme.txt</a></p>
         <p id="copyright">© Anson Moorey 2021</p>
     </footer>
 
