--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <!-- If you are reading this, then good for you!! :) -->
 <html>
 <head>
+    <style>
+        html {color=#363636;}
+    </style>
     <link rel="stylesheet" href="main.css">
     <link rel="icon" href="favicon.png">
     <link rel="preconnect" href="https://fonts.gstatic.com">
