--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 <head>
     <style>
-        html, body {background-color: #363636;}
+        html {background-color: #363636;}
     </style>
     <link rel="stylesheet" href="main.css">
     <link rel="icon" href="favicon.png">
