--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 <head>
     <style>
-        html {background-color: #363636;}
+        html {background-image:url("SelfMade Dark background.png")}
     </style>
     <link rel="stylesheet" href="main.css">
     <link rel="icon" href="favicon.png">
