--- a/quote.html
+++ b/quote.html
@@ -3,7 +3,7 @@
 <html>
 <head>
     <style>
-        html {background-image:url("SelfMade Dark background.png");background-repeat:no-repeat;background-size:cover;}
+        html {background-image:url("SelfMade Dark background.png");background-repeat:no-repeat;background-attachment:fixed;}
         p {color:#8a8a8a;}
     </style>
     <link rel="stylesheet" href="main.css">
