--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <div class="header_div">
         <h1>ITS ABOUT DRIVE<br>ITS ABOUT POWER</h1>
-        <h3><a href="/NasaViewingCentre.html">Nasa 3D Viewer</a> • <a href="/quote.html">Quote</a> • <a href="/index.html">Home</a></h3>
+        <h3><a href="/NasaViewingCentre.html">Nasa 3D Viewer</a> • <a href="/webpage.html">Literally Nothing</a> • <a href="/index.html">Home</a></h3>
     </div>
     <footer>
         <p id="infodisplay">...</p>
