--- a/NasaViewingCentre.html
+++ b/NasaViewingCentre.html
@@ -5,3 +5,8 @@ iframe {padding: 20px;}
 </style>
 <iframe src="https://eyes.nasa.gov/apps/orrery/#/home" width="800" height="600" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
 <iframe src="https://eyes.nasa.gov/apps/earth/#/" width="1000" height="600" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
+
+<footer>
+  <p id=copyright"><a href="/README.txt">readme.txt</a></p>
+  <p id="copyright">Not Affiliated with Nasa</p>
+</footer>
