--- a/NasaViewingCentre.html
+++ b/NasaViewingCentre.html
@@ -1,8 +1,11 @@
 <title>Nasa Live Modeling</title>
+<link rel="stylesheet" href="main.css">
+
 <style>
 html {background-image: url("bg.jpg");}
 iframe {padding: 20px;}
 </style>
+
 <iframe src="https://eyes.nasa.gov/apps/orrery/#/home" width="800" height="600" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
 <iframe src="https://eyes.nasa.gov/apps/earth/#/" width="1000" height="600" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
 
