--- a/NasaViewingCentre.html
+++ b/NasaViewingCentre.html
@@ -4,7 +4,7 @@
 <style>
   html {background-image: url("bg.jpg");}
   iframe {padding: 20px;}
-  footer {background-color: #2e2e2e;}
+  p {background-color:#242424; color:#757575;}
 </style>
 
 <iframe src="https://eyes.nasa.gov/apps/orrery/#/home" width="800" height="600" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
