--- a/webpage.html
+++ b/webpage.html
@@ -13,7 +13,9 @@
 </head>
 
 <body>
-    <p class="default_text">What should I put here?</p>
+    <h2 class="default_text">Content</h2>
+    <a class="default_text" href="/send_cmd_message_to_target.bat">Send CMD Message to Target (.bat)</a>
+    <a class="default_text" href="/send_cmd_msg_countdown_to_target.bat">Send CMD msg Countdown to target (.bat)</a>
     <footer>
         <p id="infodisplay">...</p>
         <p id="copyright">© Anson Moorey 2021</p>
