Update and rename webpage.html to content.html

--- a/content.html
+++ b/content.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <h2 class="default_text">Content</h2>
+    <h2 class="default_text" style={text-align:center; margin-top:40px; margin-bottom:40px;}>Content</h2>
     <a class="default_text" href="/send_cmd_message_to_target.bat">Send CMD Message to Target (.bat)</a>
     <a class="default_text" href="/send_cmd_msg_countdown_to_target.bat">Send CMD msg Countdown to target (.bat)</a>
     <footer>
