--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 
 <body>
     <div class="header_div">
-        <h1>ITS ABOUT DRIVE<br>ITS ABOUT POWER</h1>
-        <h3><a href="/NasaViewingCentre.html">Nasa 3D Viewer</a> • <a href="/webpage.html">Literally Nothing</a> • <a href="/index.html">Home</a></h3>
+        <h1>Merry<br>Christmas!</h1>
+        <h3><a href="/NasaViewingCentre.html">Nasa 3D Viewer</a> • <a href="/content.html">Content</a> • <a href="/index.html">Home</a></h3>
     </div>
     <footer>
         <p id="infodisplay">...</p>
