--- a/content.html
+++ b/content.html
@@ -17,8 +17,7 @@
     <a class="default_text" href="/send_cmd_message_to_target.bat">Send CMD Message to Target (.bat)</a>
     <a class="default_text" href="/send_cmd_msg_countdown_to_target.bat">Send CMD msg Countdown to target (.bat)</a>
     <footer>
-        <p id="infodisplay">...</p>
-        <p id="copyright">© Anson Moorey 2021</p>
+        <p id="lighter_text">© Anson Moorey 2021</p>
     </footer>
 
 </body>
