--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     </div>
     <footer>
         <p id="infodisplay">...</p>
-        <p id=copyright"><a href="/README.txt">readme.txt</a></p>
-        <p id="copyright">© Anson Moorey 2021</p>
+        <p><a href="/README.txt">readme.txt</a></p>
+        <p>© Anson Moorey 2021</p>
     </footer>
 
 <script>
