--- a/content.html
+++ b/content.html
@@ -17,6 +17,7 @@
     <a class="default_text" href="/send_cmd_message_to_target.bat">Send CMD Message to Target (.bat)</a>
     <a class="default_text" href="/send_cmd_msg_countdown_to_target.bat">Send CMD msg Countdown to target (.bat)</a>
     <footer>
+        <p id="lighter_text"><a href="/README.txt">readme.txt</a></p>
         <p id="lighter_text">© Anson Moorey 2021</p>
     </footer>
 
