--- a/content.html
+++ b/content.html
@@ -18,8 +18,8 @@
     <a class="default_text" id="lighter_text"href="/content/send_cmd_msg_countdown_to_target.bat">Send CMD msg Countdown to target (.bat)</a>
     <a class="default_text" id="lighter_text"href="/content/send_cmd_msg_range_to_check_presence_of_targets.bat">Check Presence of a Range of Targets (.bat)</a>
     <footer>
-        <p id="lighter_text"><a id="lighter_text" href="/README.txt">readme.txt</a></p>
-        <p id="lighter_text">© Anson Moorey 2021</p>
+        <p><a href="/README.txt">readme.txt</a></p>
+        <p>© Anson Moorey 2021</p>
     </footer>
 
 </body>
