--- a/NasaViewingCentre.html
+++ b/NasaViewingCentre.html
@@ -11,6 +11,6 @@
 <iframe src="https://eyes.nasa.gov/apps/earth/#/" width="1000" height="600" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
 
 <footer>
-  <p id=copyright"><a href="/README.txt">readme.txt</a></p>
-  <p id="copyright">Not Affiliated with Nasa</p>
+  <p id="lighter_text"><a id="lighter_text" href="/README.txt">readme.txt</a></p>
+  <p id="lighter_text">Not Affiliated with Nasa<br><a href="https://eyes.nasa.gov/">https://eyes.nasa.gov/</a></p>
 </footer>
