--- a/content.html
+++ b/content.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <h2 class="default_text" style={text-align:center; margin-top:40px; margin-bottom:40px;}>Content</h2>
+    <h2 class="default_text" id="lighter_text" style={text-align:center; margin-top:40px; margin-bottom:40px;}>Content</h2>
     <a class="default_text" id="lighter_text"href="/content/send_cmd_message_to_target.bat">Send CMD Message to Target (.bat)</a>
     <a class="default_text" id="lighter_text"href="/content/send_cmd_msg_countdown_to_target.bat">Send CMD msg Countdown to target (.bat)</a>
     <a class="default_text" id="lighter_text"href="/content/send_cmd_msg_range_to_check_presence_of_targets.bat">Check Presence of a Range of Targets (.bat)</a>
