--- a/NasaViewingCentre.html
+++ b/NasaViewingCentre.html
@@ -12,5 +12,5 @@
 
 <footer>
   <p id="lighter_text"><a id="lighter_text" href="/README.txt">readme.txt</a></p>
-  <p id="lighter_text">Not Affiliated with Nasa<br><a href="https://eyes.nasa.gov/">https://eyes.nasa.gov/</a></p>
+  <p id="lighter_text">Not Affiliated with Nasa<br><a id="lighter_text" href="https://eyes.nasa.gov/">https://eyes.nasa.gov/</a></p>
 </footer>
