--- a/content/unavailable.html
+++ b/content/unavailable.html
@@ -5,7 +5,7 @@
     <style>
         html {background-image:url("SelfMade Dark background.png");background-repeat:no-repeat;background-attachment:fixed;}
     </style>
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="../main.css">
     <link rel="icon" href="favicon.png">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300&display=swap" rel="stylesheet">
