--- a/content/unavailable.html
+++ b/content/unavailable.html
@@ -3,7 +3,7 @@
 <html>
 <head>
     <style>
-        html {background-image:url("SelfMade Dark background.png");background-repeat:no-repeat;background-attachment:fixed;}
+        html {background-image:url("../SelfMade Dark background.png");background-repeat:no-repeat;background-attachment:fixed;}
     </style>
     <link rel="stylesheet" href="../main.css">
     <link rel="icon" href="favicon.png">
@@ -14,7 +14,7 @@
 <body>
     <h2 class="default_text" id="lighter_text" style={text-align:center; margin-top:40px; margin-bottom:40px;}>What you are looking for is currently unavailable or is in development.</h2>
     <footer>
-        <p><a href="/README.txt">readme.txt</a></p>
+        <p><a href="../README.txt">readme.txt</a></p>
         <p>© Anson Moorey 2021</p>
     </footer>
 
