--- a/content/unavailable.html
+++ b/content/unavailable.html
@@ -13,7 +13,7 @@
 
 <body>
     <h2 class="default_text" id="lighter_text" style="text-align:center; margin-top:40px; margin-bottom:40px"><hr>What you are looking for is currently unavailable or is in development.<hr></h2>
-    <button style="text-align:center" onclick="history.back()"><p class="default_text">Go Back Where <br>You Came From</p></button>
+    <button style="margin-left: 50%; color: #1c1c1c;" onclick="history.back()"><p class="default_text">Go Back Where You Came From</p></button>
     <footer>
         <p><a href="../README.txt">readme.txt</a></p>
         <p>© Anson Moorey 2021</p>
