--- a/content/unavailable.html
+++ b/content/unavailable.html
@@ -13,9 +13,11 @@
 
 <body>
     <h2 class="default_text" id="lighter_text" style="text-align:center; margin-top:40px; margin-bottom:40px"><hr>What you are looking for is currently unavailable or is in development.<hr></h2>
-    <button style="margin:auto; background-color: #858585;" onclick="history.back()">
-        <p class="default_text" style="font-size:12px; margin:3px;">Go Back Where<br> You Came From</p>
-    </button>
+    <div style="margin:auto; width:80px;>
+        <button style="background-color: #858585;" onclick="history.back()">
+            <p class="default_text" style="font-size:12px; margin:3px;">Go Back Where<br> You Came From</p>
+        </button>
+    </div>
     <footer>
         <p><a href="../README.txt">readme.txt</a></p>
         <p>© Anson Moorey 2021</p>
