--- a/content/unavailable.html
+++ b/content/unavailable.html
@@ -15,7 +15,7 @@
     <h2 class="default_text" id="lighter_text" style="text-align:center; margin-top:40px; margin-bottom:40px"><hr>What you are looking for is currently unavailable or is in development.<hr></h2>
     <div style="margin:auto; width:80px;>
         <button style="background-color: #9e9e9e;" onclick="history.back()">
-            <p class="default_text" style="font-size:14px; margin:3px;">Go Back Where<br> You Came From</p>
+            <p class="default_text" style="font-size:14px; margin:3px;">Go Back Where You Came From</p>
         </button>
     </div>
     <footer>
