--- a/content/unavailable.html
+++ b/content/unavailable.html
@@ -14,7 +14,7 @@
 <body>
     <h2 class="default_text" id="lighter_text" style="text-align:center; margin-top:40px; margin-bottom:40px"><hr>What you are looking for is currently unavailable or is in development.<hr></h2>
     <div style="margin:auto; width:100px;>
-        <button style="background-color: #ffffff;" onclick="history.back()">
+        <button style="background-color:#ffffff" onclick="history.back()">
             <p class="default_text">Go Back Where You Came From</p>
         </button>
     </div>
