--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         html {background-image:url("SelfMade Dark background.png");background-repeat:no-repeat;background-attachment:fixed;}
     </style>
     <link rel="stylesheet" href="main.css">
-    <link rel="icon" href="favicon.png">
+    <link rel="icon" href="ThickerRingsFavicon-Trimmed Corners.png">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300&display=swap" rel="stylesheet">
 </head>
