--- a/content.html
+++ b/content.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <img src="ThickerRingsFavicon-Trimmed Corners.png" alt="Site Logo" width="40" height="40">
+    <img src="ThickerRingsFavicon-Trimmed Corners.png" alt="Site Logo" class="subpage_top_left_logo">
     <h2 class="default_text" id="lighter_text" style={text-align:center; margin-top:40px; margin-bottom:40px; display:inline;}>Content</h2>
     <a class="default_text" id="lighter_text"href="/content/send_cmd_message_to_target.bat">Send CMD Message to Target (.bat)</a>
     <a class="default_text" id="lighter_text"href="/content/send_cmd_msg_countdown_to_target.bat">Send CMD msg Countdown to target (.bat)</a>
