--- a/content.html
+++ b/content.html
@@ -12,8 +12,10 @@
 </head>
 
 <body>
-    <a href="/index.html"><img src="ThickerRingsFavicon-Trimmed Corners.png" alt="Site Logo" class="subpage_top_left_logo"></a>
-    <h2 class="default_text" id="lighter_text" style="text-align:center; margin-top:40px; margin-bottom:40px; display:inline;">Content</h2>
+    <div class="subpage_header">
+        <a href="/index.html"><img src="ThickerRingsFavicon-Trimmed Corners.png" alt="Site Logo" class="subpage_top_left_logo"></a>
+        <h2 class="default_text" id="lighter_text" style="text-align:center; margin-top:40px; margin-bottom:40px; display:inline;">Content</h2>
+    </div>
     <a class="default_text" id="lighter_text"href="/content/send_cmd_message_to_target.bat">Send CMD Message to Target (.bat)</a>
     <a class="default_text" id="lighter_text"href="/content/send_cmd_msg_countdown_to_target.bat">Send CMD msg Countdown to target (.bat)</a>
     <a class="default_text" id="lighter_text"href="/content/send_cmd_msg_range_to_check_presence_of_targets.bat">Check Presence of a Range of Targets (.bat)</a>
