--- a/game.html
+++ b/game.html
@@ -17,7 +17,8 @@
         <h2 class="default_text" id="lighter_text" style="text-align:center; margin-top:40px; margin-bottom:40px; display:inline;">Game</h2>
     </div>
     <div class="game_boundary">
-      <p>Placeholder</p>
+        <p id="text_update">Placeholder</p>
+        <img id="sprite" src="ThickerRingsFavicon-Trimmed Corners.png" alt="Game Sprite" width=10 height=10>
     </div>
     <footer>
         <p><a href="/README.txt">readme.txt</a></p>
