--- a/game.html
+++ b/game.html
@@ -33,7 +33,7 @@
             document.getElementById("text_update").innerHTML = key_pressed;
             if (key_pressed == "ArrowUp") {
                 document.getElementById("sprite").style.bottom = "20px";
-            } elif (key_pressed == "ArrowDown") {
+            } else if (key_pressed == "ArrowDown") {
                 document.getElementById("sprite").style.bottom = "0px";
             }
         }
