--- a/game.html
+++ b/game.html
@@ -40,6 +40,12 @@
             } else if (key_pressed == "ArrowDown") {
                 vertical_pos -= 10;
                 document.getElementById("sprite").style.bottom = vertical_pos + "px";
+            } else if (key_pressed == "ArrowRight") {
+                horizontal_pos += 10;
+                document.getElementById("sprite").style.bottom = horizontal_pos + "px";
+            } else if (key_pressed == "ArrowLeft") {
+                horizontal_pos -= 10;
+                document.getElementById("sprite").style.bottom = horizontal_pos + "px";
             }
         }
 </script>
