--- a/game.html
+++ b/game.html
@@ -42,10 +42,10 @@
                 document.getElementById("sprite").style.bottom = vertical_pos + "px";
             } else if (key_pressed == "ArrowRight") {
                 horizontal_pos += 10;
-                document.getElementById("sprite").style.bottom = horizontal_pos + "px";
+                document.getElementById("sprite").style.left = horizontal_pos + "px";
             } else if (key_pressed == "ArrowLeft") {
                 horizontal_pos -= 10;
-                document.getElementById("sprite").style.bottom = horizontal_pos + "px";
+                document.getElementById("sprite").style.left = horizontal_pos + "px";
             }
         }
 </script>
