--- a/content.html
+++ b/content.html
@@ -19,12 +19,13 @@
     <a class="default_text" id="lighter_text"href="/content/send_cmd_message_to_target.bat">Send CMD Message to Target (.bat)</a>
     <a class="default_text" id="lighter_text"href="/content/send_cmd_msg_countdown_to_target.bat">Send CMD msg Countdown to target (.bat)</a>
     <a class="default_text" id="lighter_text"href="/content/send_cmd_msg_range_to_check_presence_of_targets.bat">Check Presence of a Range of Targets (.bat)</a>
-    <a class="default_text" id="lighter_text"href="/content/unavailable.html">Chrome Extension (.dir) [Unavailable]</a>
-    <a class="default_text" id="lighter_text"href="/content/unavailable.html">Chrome Extension (.zip) [Unavailable]</a>
-    <a class="default_text" id="lighter_text"href="/content/unavailable.html">Keylogger (.py) [Unavailable]</a>
+    <a class="default_text" id="lighter_text"href="/unavailable.html">Chrome Extension (.dir) [Unavailable]</a>
+    <a class="default_text" id="lighter_text"href="/unavailable.html">Chrome Extension (.zip) [Unavailable]</a>
+    <a class="default_text" id="lighter_text"href="/unavailable.html">Keylogger (.py) [Unavailable]</a>
     <p id="lighter_text"><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>Bottom Of Page</p>
     <footer>
         <p><a href="/README.txt">readme.txt</a></p>
+        <p><a href="/unavailable.html">Upload Content</a></p>
         <p>© Anson Moorey 2021</p>
     </footer>
 
