--- a/content.html
+++ b/content.html
@@ -19,6 +19,7 @@
     <a class="default_text" id="lighter_text"href="/content/send_cmd_message_to_target.bat">Send CMD Message to Target (.bat)</a>
     <a class="default_text" id="lighter_text"href="/content/send_cmd_msg_countdown_to_target.bat">Send CMD msg Countdown to target (.bat)</a>
     <a class="default_text" id="lighter_text"href="/content/send_cmd_msg_range_to_check_presence_of_targets.bat">Check Presence of a Range of Targets (.bat)</a>
+    <a class="default_text" id="lighter_text"href="/content/get_domain_users.bat">Create document of all domain users (.bat)</a>
     <a class="default_text" id="lighter_text"href="/unavailable.html">Chrome Extension (.dir) [Unavailable]</a>
     <a class="default_text" id="lighter_text"href="/unavailable.html">Chrome Extension (.zip) [Unavailable]</a>
     <a class="default_text" id="lighter_text"href="/unavailable.html">Keylogger (.py) [Unavailable]</a>
