--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- If you are reading this, then good for you!! :) -->
+<!-- If you are reading this, why? lol -->
 <html>
 <head>
     <style>
@@ -13,13 +13,13 @@
 
 <body>
     <div class="header_div">
-        <h1>Merry<br>Christmas!</h1>
-        <h3><a href="/NasaViewingCentre.html">Nasa 3D Viewer</a> • <a href="/content.html">Content</a> • <a href="/index.html">Home</a> • <a href="/game.html">Game</a></h3>
+        <h1>Anson<br>Moorey</h1>
+        <h3><a href="/NasaViewingCentre.html">Embedded Orbit Viewer</a> • <a href="/content.html">Content</a> • <a href="/index.html">Home</a> • <a href="/game.html">Game</a></h3>
     </div>
     <footer>
         <p id="infodisplay">...</p>
         <p><a href="/README.txt">readme.txt</a></p>
-        <p>© Anson Moorey 2021</p>
+        <p>© Anson Moorey 2022</p>
     </footer>
 
 <script>
