--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <div class="header_div">
         <h1>Anson<br>Moorey</h1>
-        <h3><a href="/NasaViewingCentre.html">Embedded Orbit Viewer</a> • <a href="/content.html">Content</a> • <a href="/index.html">Home</a></h3>
+        <h3><a href="/content.html">Content</a> • <a href="/index.html">Home</a></h3>
     </div>
     <footer>
         <p id="infodisplay">...</p>
