--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
 
 <body>
     <div class="header_div">
+        <img src="Current Logo.png" alt="Site Logo">
         <h1>Anson<br>Moorey</h1>
-        <h3><a href="/index.html">Home</a> • <a>Content</a></h3>
+        <h3><a href="/index.html">Home</a></h3>
     </div>
     <footer>
         <p>© Anson Moorey 2023</p>
