--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <div class="header_div">
-        <img src="Current Logo.png" alt="Site Logo">
+        <img src="Current Logo.png" alt="Site Logo" width="200" height="200">
         <h1>Anson<br>Moorey</h1>
         <h3><a href="/index.html">Home</a></h3>
     </div>
