--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
 
 <body>
     <div class="header_div">
-        <img src="Current Logo.png" alt="Site Logo" width="150" height="150">
-        <h1>Anson<br>Moorey</h1>
+        <img src="A Logo.png" alt="A" width="75" height="75">
+        <h1>nson</h1>
+        <img src="M Logo.png" alt="M" width="75" height="75">
+        <h1>oorey</h1>
         <h3><a href="/index.html">Home</a></h3>
     </div>
     <footer>
