--- a/index.html
+++ b/index.html
@@ -16,6 +16,14 @@
         <img src="A Logo.png" alt="A" width="75" height="75">
         <img src="M Logo.png" alt="M" width="75" height="75">
     </div>
+    <h1 style="text-align: center">Projects</h1>
+    <h2 style="text-align: left">Research</h1>
+    <h4>Fourier transform</h4>
+    <h4>Dopants in Cz silicon wafer photovoltaic cells</h4>
+    <h2 style="text-align: right">Programming</h1>
+    <h4>Java - 2D Physics Engine</h4>
+    <h4>Python - Graphing The Collatz Conjecture</h4>
+    <h4>Python & Arduino C++/C - Graphing physical obstructions seen by rotational ultrasonic sensor</h4>
     <footer>
         <p>© Anson Moorey 2023</p>
     </footer>
