--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- If you are reading this, why? lol -->
+<!-- If you are reading this: Glad you're interested, I guess...? -->
 <html>
 <head>
     <style>
@@ -18,12 +18,12 @@
     </div>
     <h1 style="text-align: center">Projects</h1>
     <h2 style="text-align: left">Research</h1>
-    <h3>Fourier transform</h4>
-    <h3>Dopants in Cz silicon wafer photovoltaic cells</h4>
+    <h3>Application and exploration of the discrete Fourier transform</h3>
+    <h3>Effects of using either boron-phosphorus dopants or gallium-arsenic dopants in silicon photovoltaic cells</h3>
     <h2 style="text-align: right">Programming</h1>
-    <h3>Java - 2D Physics Engine</h4>
-    <h3>Python - Graphing The Collatz Conjecture</h4>
-    <h3>Python & Arduino C++/C - Graphing physical obstructions seen by rotational ultrasonic sensor</h4>
+    <h3>Java - Two dimentional physics engine</h3>
+    <h3>Python - Graphing the Collatz conjecture</h3>
+    <h3>Python & Arduino C++/C - Graphing physical obstructions seen by rotational ultrasonic sensor</h3>
     <footer>
         <p>© Anson Moorey 2023</p>
     </footer>
