--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
     <h3>Application and exploration of the discrete Fourier transform</h3>
     <h3>Effects of using either boron-phosphorus dopants or gallium-arsenic dopants in silicon photovoltaic cells</h3>
     <h2 style="text-align: right">Programming</h1>
-    <h3>Java - Two dimentional physics engine</h3>
-    <h3>Python - Graphing the Collatz conjecture</h3>
-    <h3>Python & Arduino C++/C - Graphing physical obstructions seen by rotational ultrasonic sensor</h3>
+    <h3 style="text-align: right">Java - Two dimentional physics engine</h3>
+    <h3 style="text-align: right">Python - Graphing the Collatz conjecture</h3>
+    <h3 style="text-align: right">Python & Arduino C++/C - Graphing physical obstructions seen by rotational ultrasonic sensor</h3>
     <footer>
         <p>© Anson Moorey 2023</p>
     </footer>
