--- a/index.html
+++ b/index.html
@@ -19,11 +19,16 @@
     <h1 style="text-align: center">Projects</h1>
     <h2 style="text-align: left">Research</h1>
     <h3>Application and exploration of the discrete Fourier transform</h3>
+    <p>Alongside a Python program that calculates and graphs the Fourier transform for a given function or audio clip.</p>
     <h3>Effects of using either boron-phosphorus dopants or gallium-arsenic dopants in silicon photovoltaic cells</h3>
+    <p>Increasing the efficiency of renewable electricity sources is a significant endeavor in modern society. In the design of photovoltaic cells, the chemical structures that generate electron flow are the primary determining factors of efficacy. In the context of silicon wafer photovoltaic cells, is there a benefit or a drawback to changing the common p-type and n-type dopants, boron and phosphorus, to gallium and arsenic? The primary disadvantage of boron is a lower recombination time of charge carriers in the presence of B<sub>s</sub>O<sub>2</sub>. This lowers the efficiency of the photovoltaic cell. It is concluded that between these two dopant pairs, they both can be equally effective. With a boron dopant, to have PV efficiency equal to that of gallium would require alternative methods of silicon crystal structure growth that do not produce an oxygen concentration any higher than 1ppm, or to modify B<sub>s</sub>O<sub>2</sub> to a "regenerated" inactive state.</p>
     <h2 style="text-align: right">Programming</h1>
-    <h3 style="text-align: right">Java - Two dimentional physics engine</h3>
-    <h3 style="text-align: right">Python - Graphing the Collatz conjecture</h3>
-    <h3 style="text-align: right">Python & Arduino C++/C - Graphing physical obstructions seen by rotational ultrasonic sensor</h3>
+    <h3 style="text-align: right">Two dimentional physics engine</h3>
+    <p>Java</p>
+    <h3 style="text-align: right">Graphing the Collatz conjecture</h3>
+    <p>Python</p>
+    <h3 style="text-align: right">Graphing physical obstructions seen by rotational ultrasonic sensor</h3>
+    <p>Python and Arduino C++ variant</p>
     <footer>
         <p>© Anson Moorey 2023</p>
     </footer>
