--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <style>
         html {background-image:url("dark_bg.png");background-repeat:no-repeat;background-attachment:fixed;}
+        .header_div {background-image:url("colour_bg.png");background-repeat:no-repeat;}
     </style>
     <link rel="stylesheet" href="main.css">
     <link rel="icon" href="A Logo.png">
