--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <p>Based upon experimental data.</p>
         
     <h2 style="text-align: right">Programming</h1>
-    <h3 style="text-align: right">Two dimentional physics engine</h3>
+    <h3 style="text-align: right">Two dimensional physics engine</h3>
     <p style="text-align: right">Java</p>
     <h3 style="text-align: right">Graphing the Collatz conjecture</h3>
     <p style="text-align: right">Python</p>
