--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
     <h1 style="text-align: center">Projects</h1>
     
     <h2 style="text-align: left">Research</h1>
-    <h3>Application and exploration of the discrete Fourier transform</h3>
-    <p>Alongside a Python program that calculates and graphs the Fourier transform for a given function or audio clip.</p>
-    <h3>Effects of using either boron-phosphorus dopants or gallium-arsenic dopants in silicon photovoltaic cells</h3>
+    <h3 style="width: 50%; word-wrap: normal;">Application and exploration of the discrete Fourier transform</h3>
+    <p style="width: 50%; word-wrap: normal;">Alongside a Python program that calculates and graphs the Fourier transform for a given function or audio clip.</p>
+    <h3 style="width: 50%; word-wrap: normal;">Effects of using either boron-phosphorus dopants or gallium-arsenic dopants in silicon photovoltaic cells</h3>
     <p style="width: 50%; word-wrap: normal;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Increasing the efficiency of renewable electricity sources is a significant endeavor in modern society. In the design of photovoltaic cells, the chemical structures that generate electron flow are the primary determining factors of efficacy. In the context of silicon wafer photovoltaic cells, is there a benefit or a drawback to changing the common p-type and n-type dopants, boron and phosphorus, to gallium and arsenic? The primary disadvantage of boron is a lower recombination time of charge carriers in the presence of B<sub>s</sub>O<sub>2</sub>. This lowers the efficiency of the photovoltaic cell. Empirical data from other scientific literature is assessed to draw conclusions. It is concluded that conditionally, they both can be equally effective. With a boron dopant, to have PV efficiency equal to that of gallium would require alternative methods of silicon crystal structure growth that do not produce an oxygen concentration any higher than 1ppm, or to modify B<sub>s</sub>O<sub>2</sub> to a "regenerated" inactive state.</p>
     <h3 style="width: 50%; word-wrap: normal;">Relationship between the volume of permanent magnet and the magnetic force experienced by the permanent magnet in a coil-generated magnetic field</h3>
-    <p>Based upon experimental data.</p>
+    <p style="width: 50%; word-wrap: normal;">Based upon experimental data.</p>
         
     <h2 style="text-align: right">Programming</h1>
     <h3 style="text-align: right">Two dimensional physics engine</h3>
