--- a/index.html
+++ b/index.html
@@ -13,10 +13,16 @@
 </head>
 
 <body>
-    <div class="header_div">
+    <header>
         <img src="A Logo.png" alt="A" width="75" height="75">
         <img src="M Logo.png" alt="M" width="75" height="75">
-    </div>
+        <nav>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Projects</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </nav>
     <h1 style="text-align: center">Projects</h1>
     
     <h2 style="text-align: left">Research</h1>
