--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300&display=swap" rel="stylesheet">
 </head>
 
-<body>
-    <header>
+<header>
         <img src="A Logo.png" alt="A" width="75" height="75">
         <img src="M Logo.png" alt="M" width="75" height="75">
         <nav>
@@ -23,6 +22,9 @@
                 <li><a href="#">Contact</a></li>
             </ul>
         </nav>
+    </header>
+
+<body>
     <h1 style="text-align: center">Projects</h1>
     
     <h2 style="text-align: left">Research</h1>
