--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <img src="A Logo.png" alt="A" width="75" height="75">
     <img src="M Logo.png" alt="M" width="75" height="75">
     <nav>
-        <ul>
+        <ul style="color: #000000">
             <li><a href="#">Home</a></li>
             <li><a href="#">Projects</a></li>
             <li><a href="#">Contact</a></li>
