--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
     <img src="M Logo.png" alt="M" width="75" height="75">
     <nav>
         <ul style="color: #000000">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Projects</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="#" style="color:#000000">Home</a></li>
+            <li><a href="#" style="color:#000000">Projects</a></li>
+            <li><a href="#" style="color:#000000">Contact</a></li>
         </ul>
     </nav>
 </header>
