--- a/index.html
+++ b/index.html
@@ -36,8 +36,9 @@
     <p style="width: 50%; word-wrap: normal;">Based upon experimental data.</p>
         
     <h2 style="text-align: right">Programming</h1>
-    <h3 style="text-align: right">Two dimensional physics engine</h3>
+    <h3 style="text-align: right">Three dimensional graphics engine with basic kinematics</h3>
     <p style="text-align: right">Java</p>
+    <img src="graphics_engine_v0.3.png" alt="graphics" width="40%" style="text-align: right">
     <h3 style="text-align: right">Graphing the Collatz conjecture</h3>
     <p style="text-align: right">Python</p>
     <h3 style="text-align: right">Graphing physical obstructions seen by rotational ultrasonic sensor</h3>
