--- a/index.html
+++ b/index.html
@@ -26,23 +26,26 @@
 
 <body>
     <h1 style="text-align: center">Projects</h1>
+    <div style="width: 50%; text-align: left">
+        <h2>Research</h1>
+        <h3 style="word-wrap: normal;">Application and exploration of the discrete Fourier transform</h3>
+        <p style="word-wrap: normal;">Alongside a Python program that calculates and graphs the Fourier transform for a given function or audio clip.</p>
+        <h3 style="word-wrap: normal;"><a href="/Effects of using either boron-phosphorus dopants or gallium-arsenic dopants.pdf">Effects of using either boron-phosphorus dopants or gallium-arsenic dopants in silicon photovoltaic cells</a></h3>
+        <p style="word-wrap: normal;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Increasing the efficiency of renewable electricity sources is a significant endeavor in modern society. In the design of photovoltaic cells, the chemical structures that generate electron flow are the primary determining factors of efficacy. In the context of silicon wafer photovoltaic cells, is there a benefit or a drawback to changing the common p-type and n-type dopants, boron and phosphorus, to gallium and arsenic? The primary disadvantage of boron is a lower recombination time of charge carriers in the presence of B<sub>s</sub>O<sub>2</sub> in Czochralski silicon. This lowers the efficiency of the photovoltaic cell. Empirical data from other scientific literature is assessed to draw conclusions. It is concluded that conditionally, boron and phosphorus are more efficient. With a boron dopant, to have photovoltaic efficiency equal to that of gallium would require alternative methods of silicon crystal structure growth that do not produce an oxygen concentration any higher than 1ppm, or to modify B<sub>s</sub>O<sub>2</sub> to a "regenerated" inactive state. Furthermore, electron drift is slower in arsenic-doped silicon than in phosphorus-doped silicon, leading to a lower efficiency when using arsenic.</p>
+        <h3 style="word-wrap: normal;">Relationship between the volume of permanent magnet and the magnetic force experienced by the permanent magnet in a coil-generated magnetic field</h3>
+        <p style="word-wrap: normal;">Based upon experimental data.</p>
+    </div>
     
-    <h2 style="text-align: left">Research</h1>
-    <h3 style="width: 50%; word-wrap: normal;">Application and exploration of the discrete Fourier transform</h3>
-    <p style="width: 50%; word-wrap: normal;">Alongside a Python program that calculates and graphs the Fourier transform for a given function or audio clip.</p>
-    <h3 style="width: 50%; word-wrap: normal;"><a href="/Effects of using either boron-phosphorus dopants or gallium-arsenic dopants.pdf">Effects of using either boron-phosphorus dopants or gallium-arsenic dopants in silicon photovoltaic cells</a></h3>
-    <p style="width: 50%; word-wrap: normal;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Increasing the efficiency of renewable electricity sources is a significant endeavor in modern society. In the design of photovoltaic cells, the chemical structures that generate electron flow are the primary determining factors of efficacy. In the context of silicon wafer photovoltaic cells, is there a benefit or a drawback to changing the common p-type and n-type dopants, boron and phosphorus, to gallium and arsenic? The primary disadvantage of boron is a lower recombination time of charge carriers in the presence of B<sub>s</sub>O<sub>2</sub> in Czochralski silicon. This lowers the efficiency of the photovoltaic cell. Empirical data from other scientific literature is assessed to draw conclusions. It is concluded that conditionally, boron and phosphorus are more efficient. With a boron dopant, to have photovoltaic efficiency equal to that of gallium would require alternative methods of silicon crystal structure growth that do not produce an oxygen concentration any higher than 1ppm, or to modify B<sub>s</sub>O<sub>2</sub> to a "regenerated" inactive state. Furthermore, electron drift is slower in arsenic-doped silicon than in phosphorus-doped silicon, leading to a lower efficiency when using arsenic.</p>
-    <h3 style="width: 50%; word-wrap: normal;">Relationship between the volume of permanent magnet and the magnetic force experienced by the permanent magnet in a coil-generated magnetic field</h3>
-    <p style="width: 50%; word-wrap: normal;">Based upon experimental data.</p>
-        
-    <h2 style="text-align: right">Programming</h1>
-    <h3 style="text-align: right">Three dimensional graphics engine with basic kinematics</h3>
-    <p style="text-align: right">Java</p>
-    <img src="graphics_engine_v0.3.png" alt="graphics" width="40%" style="text-align: right">
-    <h3 style="text-align: right">Graphing the Collatz conjecture</h3>
-    <p style="text-align: right">Python</p>
-    <h3 style="text-align: right">Graphing physical obstructions seen by rotational ultrasonic sensor</h3>
-    <p style="text-align: right">Python and Arduino C++ variant</p>
+    <div style="width: 50%; text-align: right">
+        <h2>Programming</h1>
+        <h3>Three dimensional graphics engine with basic kinematics</h3>
+        <p>Java</p>
+        <img src="graphics_engine_v0.3.png" alt="graphics">
+        <h3>Graphing the Collatz conjecture</h3>
+        <p>Python</p>
+        <h3>Graphing physical obstructions seen by rotational ultrasonic sensor</h3>
+        <p>Python and Arduino C++ variant</p>
+    </div>
     <footer>
         <p>© Anson Moorey 2023</p>
     </footer>
