--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <p style="word-wrap: normal;">Based upon experimental data.</p>
     </div>
     
-    <div style=":padding-left: 50%; text-align: right">
+    <div style="padding-left: 50%; text-align: right">
         <h2>Programming</h1>
         <h3>Three dimensional graphics engine with basic kinematics</h3>
         <p>Java</p>
