--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 <body>
     <h1 style="text-align: center">Projects</h1>
-    <div style="width: 50%; text-align: left">
+    <div style="padding-right: 50%; text-align: left">
         <h2>Research</h1>
         <h3 style="word-wrap: normal;">Application and exploration of the discrete Fourier transform</h3>
         <p style="word-wrap: normal;">Alongside a Python program that calculates and graphs the Fourier transform for a given function or audio clip.</p>
