--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <h2>Programming</h1>
         <h3>Three dimensional graphics engine with basic kinematics</h3>
         <p>Java</p>
-        <img src="graphics_engine_v0.3.png" alt="graphics">
+        <img src="graphics_engine_v0.3.png" alt="graphics", style="width: 300px;">
         <h3>Graphing the Collatz conjecture</h3>
         <p>Python</p>
         <h3>Graphing physical obstructions seen by rotational ultrasonic sensor</h3>
