--- a/index.html
+++ b/index.html
@@ -1,7 +1,20 @@
 <!DOCTYPE html>
 <!-- Glad you've found me :) -->
 <html>
-    <style>
-        html {background-image:url("dark_bg.png");background-repeat:no-repeat;background-attachment:fixed;}
-    </style>
+    <header>
+        <style>
+            html {background-image:url("dark_bg.png");background-repeat:no-repeat;background-attachment:fixed;}
+        </style>
+        <link rel="stylesheet" href="main.css">
+        <link rel="icon" href="A Logo.png">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300&display=swap" rel="stylesheet">
+        
+    </header>
+    
+    <body>
+        <h2>
+            Good Morning
+        </h2>
+    </body>
 </html>
