--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300&display=swap" rel="stylesheet">
     
     <body>
-        <h1 id="title">
-            Good Morning
-        </h1>
+        <h1 id="title"></h1>
     </body>
 
     <script>
