--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
     </body>
 
     <script>
-        document.getElementById("title").innerHTML = "Hello";
+        document.getElementById("title").innerHTML = "";
     </script>
 </html>
