--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- Glad you've found me :) -->
+<!-- Glad you've found me! -->
 <html>
     <style>
         html {background-image:url("dark_bg.png");background-repeat:no-repeat;background-attachment:fixed;}
